--- a/index.html
+++ b/index.html
@@ -5,7 +5,9 @@
 </head>
 <body>
     <h1>This is a header</h1>
-    <p>Hello World</p>
+    <p>Hello World</p></br>
+    <P>Here is another paragraph</P>
+
 
 </body>
 </html>
