--- a/index.html
+++ b/index.html
@@ -8,6 +8,10 @@
     <p>Hello World</p></br>
     <P>Here is another paragraph</P>
 
+    <footer>
+        <p>Here is footer</p>
+    </footer>
+
 
 </body>
 </html>
